# cerebra

./: .gitignore  README.md  Roadmap.md  coverage.txt  example_conv_network.py  example_network.py  pyproject.toml
cerebra/: __init__.py  graph.py  network.py  optim.py
cerebra/core/: __init__.py  node.py  ops.py
cerebra/nn/: __init__.py  activations.py  conv.py  dropout.py  linear.py  loss.py  module.py  normalisation.py  pool.py
cerebra/optim/: __init__.py  base.py  sgd.py
examples/: example_network.py
py/: README.md  comp_graph.py  example_conv_network.py  example_network.py  graph.py  network.py  optim.py  pyproject.toml
py/cerebra/: __init__.py  graph.py  network.py
py/old/: comp_graph.py
py/tests/: test_conv2d.py  test_graph.py
tests/: __init__.py  test_activation.py  test_batchnorm.py  test_conv2d.py  test_dropout.py  test_graph.py  test_layernorm.py  test_linear.py  test_loss.py  test_module.py  test_optim.py  test_pool2d.py  utils.py
