[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebra"
version = "0.1.0"
description = "A Neural Network Library in Python"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = ["numpy"]
authors = [{ name = "Satya Jhaveri" }]

[tool.setuptools]
packages = ["cerebra"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
